// Copyright 2025 Sri Panyam
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package dal.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/panyam/protoc-gen-dal/protos/gen/dal/v1";

// table specifies database table options for a message.
// Use this to customize how a message maps to a database table.
//
// Example usage:
//   message Book {
//     option (dal.v1.table) = {
//       name: "books"
//       schema: "library"
//     };
//     string id = 1;
//     string title = 2;
//   }
extend google.protobuf.MessageOptions {
  TableOptions table = 60001;
}

// column specifies database column options for a field.
// Use this to customize how a field maps to a database column.
//
// Example usage:
//   message Book {
//     string id = 1 [(dal.v1.column) = {
//       name: "book_id"
//       type: "UUID"
//       primary_key: true
//     }];
//     string title = 2 [(dal.v1.column) = {
//       name: "book_title"
//       nullable: false
//       max_length: 255
//     }];
//   }
extend google.protobuf.FieldOptions {
  ColumnOptions column = 60002;
}

// index specifies an index on the table.
// Can be used on message or field level.
//
// Example usage:
//   message Book {
//     option (dal.v1.index) = {
//       name: "idx_author_title"
//       fields: "author,title"
//       unique: true
//     };
//     string author = 1;
//     string title = 2;
//   }
//
// Or on field level:
//   message Book {
//     string author = 1 [(dal.v1.index) = {unique: false}];
//   }
extend google.protobuf.MessageOptions {
  repeated IndexOptions index = 60003;
}
extend google.protobuf.FieldOptions {
  IndexOptions field_index = 60004;
}

// foreign_key specifies a foreign key relationship.
//
// Example usage:
//   message Book {
//     string author_id = 3 [(dal.v1.foreign_key) = {
//       references: "authors.id"
//       on_delete: CASCADE
//       on_update: RESTRICT
//     }];
//   }
extend google.protobuf.FieldOptions {
  ForeignKeyOptions foreign_key = 60005;
}

// skip_dal excludes a message or field from DAL generation.
//
// Example usage:
//   message InternalData {
//     option (dal.v1.skip_dal) = true;
//   }
//
//   message User {
//     string password_hash = 5 [(dal.v1.skip_dal) = true];
//   }
extend google.protobuf.MessageOptions {
  bool skip_dal = 60006;
}
extend google.protobuf.FieldOptions {
  bool skip_field = 60007;
}

// postgres specifies PostgreSQL target options.
//
// Example usage:
//   message BookPostgres {
//     option (dal.v1.postgres) = {
//       source: "library.v1.Book"
//       table: "books"
//       schema: "library"
//     };
//   }
extend google.protobuf.MessageOptions {
  PostgresOptions postgres = 60008;
}

// gorm specifies GORM target options (database-agnostic ORM).
//
// Example usage:
//   message BookGorm {
//     option (dal.v1.gorm) = {
//       source: "library.v1.Book"
//       table: "books"
//     };
//   }
extend google.protobuf.MessageOptions {
  GormOptions gorm = 60009;
}

// datastore_options specifies Google Cloud Datastore options.
//
// Example usage:
//   message Book {
//     option (dal.v1.datastore_options) = {
//       kind: "Book"
//       namespace: "library"
//     };
//   }
extend google.protobuf.MessageOptions {
  DatastoreOptions datastore_options = 60010;
}

// firestore specifies Firestore target options.
extend google.protobuf.MessageOptions {
  FirestoreOptions firestore = 60011;
}

// mongodb specifies MongoDB target options.
extend google.protobuf.MessageOptions {
  MongoDBOptions mongodb = 60012;
}

// Configuration for table mapping
message TableOptions {
  // Table name in the database
  string name = 1;

  // Database schema/namespace
  string schema = 2;

  // Custom table comment/description
  string comment = 3;

  // Source message fully qualified name (e.g., "library.v1.Book")
  // This links the DAL schema message to the API proto message
  string source = 4;
}

// Configuration for column mapping
message ColumnOptions {
  // Column name override (optional - defaults to field name)
  string name = 1;

  // Custom conversion function for API -> Target conversion
  // Overrides built-in converters (e.g., Timestamp -> int64)
  // Example:
  //   to_func: {
  //     package: "github.com/myapp/converters"
  //     alias: "myconv"
  //     function: "TimestampToMillis"
  //   }
  // Generates: import myconv "github.com/myapp/converters"
  //            gorm.Field = myconv.TimestampToMillis(api.Field)
  ConverterFunc to_func = 2;

  // Custom conversion function for Target -> API conversion
  // Example:
  //   from_func: {
  //     package: "github.com/myapp/converters"
  //     function: "MillisToTimestamp"
  //   }
  // Generates: api.Field = converters.MillisToTimestamp(gorm.Field)
  ConverterFunc from_func = 3;

  // GORM-specific tags (for GORM target)
  // Example: ["primaryKey", "type:uuid", "default:gen_random_uuid()"]
  // Generates: `gorm:"primaryKey;type:uuid;default:gen_random_uuid()"`
  repeated string gorm_tags = 10;

  // Raw SQL column definition tags (for raw SQL targets)
  // Target-specific usage
  repeated string sql_tags = 11;

  // Firestore tags (for Firestore target)
  repeated string firestore_tags = 12;

  // MongoDB tags (for MongoDB target)
  repeated string mongodb_tags = 13;

  // Datastore tags (for Google Cloud Datastore target)
  // Example: ["noindex", "omitempty"]
  // Generates: `datastore:"field_name,noindex,omitempty"`
  repeated string datastore_tags = 14;
}

// Specification for a custom converter function
message ConverterFunc {
  // Go package import path
  // Example: "github.com/myapp/converters"
  string package = 1;

  // Optional import alias
  // If not specified, uses the last segment of package path
  // Example: "myconv" -> import myconv "github.com/myapp/converters"
  string alias = 2;

  // Function name to call
  // Example: "TimestampToMillis"
  // Generates call: alias.TimestampToMillis(value)
  string function = 3;
}

// Configuration for indexes
message IndexOptions {
  // Index name
  string name = 1;

  // Comma-separated list of field names (for composite indexes)
  string fields = 2;

  // Whether this is a unique index
  bool unique = 3;

  // Index type (e.g., "BTREE", "HASH", "GIN", "GIST")
  string type = 4;

  // Partial index condition (WHERE clause)
  string where = 5;
}

// Configuration for foreign keys
message ForeignKeyOptions {
  // Referenced table and column (e.g., "authors.id")
  string references = 1;

  // Action on delete
  ReferentialAction on_delete = 2;

  // Action on update
  ReferentialAction on_update = 3;

  // Foreign key constraint name
  string constraint_name = 4;
}

// Referential actions for foreign keys
enum ReferentialAction {
  NO_ACTION = 0;
  RESTRICT = 1;
  CASCADE = 2;
  SET_NULL = 3;
  SET_DEFAULT = 4;
}

// GORM target options (database-agnostic ORM)
message GormOptions {
  // Source message fully qualified name (e.g., "library.v1.Book")
  string source = 1;

  // Table name (optional)
  // If specified, generates a TableName() method returning this value.
  // If omitted, no TableName() method is generated, allowing late-binding
  // via db.Table() or the DAL's TableName field.
  string table = 2;

  // Embedded field names (for GORM embedded structs)
  repeated string embedded = 3;

  // Generate driver.Valuer and sql.Scanner implementations for JSON serialization
  // When true, generates Value() and Scan() methods that serialize the struct to/from JSON
  // Useful for embedded types that need to be stored as JSON in the database
  bool implement_scanner = 4;

  // Generate DAL (Data Access Layer) helpers (optional)
  // If not set: defaults to true when table is specified, false otherwise
  // If explicitly true: generate DAL even without table (for late-binding)
  // If explicitly false: skip DAL generation even with table
  optional bool dal = 5;
}

// PostgreSQL target options (raw SQL)
message PostgresOptions {
  // Source message fully qualified name (e.g., "library.v1.Book")
  string source = 1;

  // Table name in PostgreSQL
  string table = 2;

  // Schema name (default: "public")
  string schema = 3;
}

// Google Cloud Datastore options
message DatastoreOptions {
  // Datastore kind name (optional)
  // If specified, generates a Kind() method returning this value.
  // If omitted, no Kind() method is generated, allowing late-binding.
  string kind = 1;

  // Datastore namespace
  string namespace = 2;

  // Whether to use incomplete keys (auto-generated)
  bool incomplete_key = 3;

  // Ancestor path
  string ancestor = 4;

  // Source message fully qualified name (e.g., "library.v1.Book")
  string source = 5;

  // Generate DAL (Data Access Layer) helpers (optional)
  // Reserved for future Datastore DAL implementation.
  // If not set: defaults to true when kind is specified, false otherwise
  optional bool dal = 6;
}

// Firestore target options
message FirestoreOptions {
  // Source message fully qualified name
  string source = 1;

  // Collection name
  string collection = 2;
}

// MongoDB target options
message MongoDBOptions {
  // Source message fully qualified name
  string source = 1;

  // Collection name
  string collection = 2;

  // Database name
  string database = 3;
}
