syntax = "proto3";

package gorm;

import "dal/v1/annotations.proto";
import "api/user.proto";  // Import API protos so they're available for source references
import "google/protobuf/timestamp.proto";

option go_package = "github.com/panyam/protoc-gen-dal/tests/gen/dal;testdal";

// UserGorm demonstrates comprehensive GORM features from https://gorm.io/docs/models.html
message UserGorm {
  option (dal.v1.gorm) = {
    source: "api.User"
    table: "users"
  };

  // Primary key with auto increment
  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey", "autoIncrement"]
  }];

  // Regular string field
  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(100)", "not null"]
  }];

  // Nullable string (pointer in Go)
  string email = 3 [(dal.v1.column) = {
    gorm_tags: ["uniqueIndex", "type:varchar(100)"]
  }];

  // Unsigned integer
  uint32 age = 4 [(dal.v1.column) = {
    gorm_tags: ["type:uint8"]
  }];

  // Timestamp stored as time.Time (GORM and Datastore native support)
  google.protobuf.Timestamp birthday = 5;

  // Nullable string field
  string member_number = 6 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(50)"]
  }];

  // Nullable timestamp
  google.protobuf.Timestamp activated_at = 7;

  // Auto-managed timestamps (GORM conventions)
  google.protobuf.Timestamp created_at = 8 [(dal.v1.column) = {
    gorm_tags: ["autoCreateTime"]
  }];

  google.protobuf.Timestamp updated_at = 9 [(dal.v1.column) = {
    gorm_tags: ["autoUpdateTime"]
  }];

  // Soft delete support (gorm.DeletedAt equivalent)
  google.protobuf.Timestamp deleted_at = 10 [(dal.v1.column) = {
    gorm_tags: ["index"]
  }];
}

// UserWithPermissions demonstrates field-level permission tags
message UserWithPermissions {
  option (dal.v1.gorm) = {
    source: "api.User"
    table: "users_with_perms"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey"]
  }];

  // Create-only field
  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["<-:create"]
  }];

  // Update-only field
  string email = 3 [(dal.v1.column) = {
    gorm_tags: ["<-:update"]
  }];

  // Read-only field
  google.protobuf.Timestamp created_at = 4 [(dal.v1.column) = {
    gorm_tags: ["->", "autoCreateTime"]
  }];

  // Read and write
  google.protobuf.Timestamp updated_at = 5 [(dal.v1.column) = {
    gorm_tags: ["<-", "autoUpdateTime"]
  }];
}

// UserWithCustomTimestamps demonstrates different timestamp tracking modes
message UserWithCustomTimestamps {
  option (dal.v1.gorm) = {
    source: "api.User"
    table: "users_custom_time"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey"]
  }];

  string name = 2;

  // Unix timestamp in seconds
  int64 created_at = 3 [(dal.v1.column) = {
    gorm_tags: ["autoCreateTime"]
  }];

  // Unix timestamp in milliseconds
  int64 updated_milli = 4 [(dal.v1.column) = {
    gorm_tags: ["autoUpdateTime:milli"]
  }];

  // Unix timestamp in nanoseconds
  int64 updated_nano = 5 [(dal.v1.column) = {
    gorm_tags: ["autoUpdateTime:nano"]
  }];
}

// UserWithIndexes demonstrates various index types
message UserWithIndexes {
  option (dal.v1.gorm) = {
    source: "api.User"
    table: "users_indexed"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey"]
  }];

  // Simple index
  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["index"]
  }];

  // Unique index
  string email = 3 [(dal.v1.column) = {
    gorm_tags: ["uniqueIndex"]
  }];

  // Named index with options
  string city = 4 [(dal.v1.column) = {
    gorm_tags: ["index:idx_city,sort:desc"]
  }];

  // Composite index (same index name on multiple fields)
  string first_name = 5 [(dal.v1.column) = {
    gorm_tags: ["index:idx_name"]
  }];

  string last_name = 6 [(dal.v1.column) = {
    gorm_tags: ["index:idx_name"]
  }];
}

// UserWithDefaults demonstrates default values
message UserWithDefaults {
  option (dal.v1.gorm) = {
    source: "api.User"
    table: "users_defaults"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey"]
  }];

  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["default:guest"]
  }];

  bool active = 3 [(dal.v1.column) = {
    gorm_tags: ["default:true"]
  }];

  google.protobuf.Timestamp created_at = 4 [(dal.v1.column) = {
    gorm_tags: ["default:CURRENT_TIMESTAMP"]
  }];
}

// AuthorGorm for embedded struct (no table - just embedded in Blog)
message AuthorGorm {
  option (dal.v1.gorm) = {
    source: "api.Author"
  };

  string name = 1;
  string email = 2;
}

// BlogAsIsGorm is a "plain" embedding where we use same types as the source
message BlogAsIsGorm {
  option (dal.v1.gorm) = {
    source: "api.Blog"
    table: "blogs"
  };
}

// BlogGorm demonstrates embedded structs with prefix
message BlogGorm {
  option (dal.v1.gorm) = {
    source: "api.Blog"
    table: "blogs"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey", "autoIncrement"]
  }];

  // Embedded struct with prefix (author_name, author_email in DB)
  AuthorGorm author = 2 [(dal.v1.column) = {
    gorm_tags: ["embedded", "embeddedPrefix:author_"]
  }];

  int32 upvotes = 3 [(dal.v1.column) = {
    gorm_tags: ["default:0"]
  }];

  string title = 4 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(255)", "not null"]
  }];
}

// ProductGorm demonstrates repeated and map field storage strategies
message ProductGorm {
  option (dal.v1.gorm) = {
    source: "api.Product"
    table: "products"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey", "autoIncrement"]
  }];

  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(255)", "not null"]
  }];

  // Repeated string as JSON (works with SQLite and PostgreSQL)
  repeated string tags = 3 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];

  // Repeated string as JSON (for cross-DB compatibility)
  repeated string categories = 4 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];

  // Map as JSON (works with SQLite and PostgreSQL)
  map<string, string> metadata = 5 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];

  // Repeated int as JSON (works with SQLite and PostgreSQL)
  repeated int32 ratings = 6 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];
}

// LibraryGorm demonstrates repeated message types stored as JSONB
message LibraryGorm {
  option (dal.v1.gorm) = {
    source: "api.Library"
    table: "libraries"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey", "autoIncrement"]
  }];

  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(255)", "not null"]
  }];

  // Repeated message type as JSON (works with SQLite and PostgreSQL)
  repeated AuthorGorm contributors = 3 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];
}

// OrganizationGorm demonstrates map with message values stored as JSONB
message OrganizationGorm {
  option (dal.v1.gorm) = {
    source: "api.Organization"
    table: "organizations"
  };

  uint32 id = 1 [(dal.v1.column) = {
    gorm_tags: ["primaryKey", "autoIncrement"]
  }];

  string name = 2 [(dal.v1.column) = {
    gorm_tags: ["type:varchar(255)", "not null"]
  }];

  // Map with message value type as JSON (works with SQLite and PostgreSQL)
  map<string, AuthorGorm> departments = 3 [(dal.v1.column) = {
    gorm_tags: ["serializer:json"]
  }];
}
